--- a/vue-lesson/index.html
+++ b/vue-lesson/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <div>hello word</div>
     <script src="/dist/build.js"></script>
   </body>
 </html>
