--- a/vue-lesson/index.html
+++ b/vue-lesson/index.html
@@ -7,6 +7,7 @@
   <body>
     <div id="app"></div>
     <div>hello word</div>
+    <div>my name is vue!!!</div>
     <script src="/dist/build.js"></script>
   </body>
 </html>
