--- a/vue-lesson/vue/index.html
+++ b/vue-lesson/vue/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link href="http://c.csdnimg.cn/public/favicon.ico" rel="SHORTCUT ICON" />
     <title>vue</title>
   </head>
   <body>
